--- a/index.html
+++ b/index.html
@@ -17,8 +17,48 @@
     </section>
   </header>
   <main class="container-fluid">
-    <section class="row">
-
+    <section class="row hero-image">
+      <div class="col col-4-md bg-light m-2 text-dark">
+        <form>
+          <div class="form-group">
+            <label for="exampleFormControlInput1">Email address</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlSelect1">Example select</label>
+            <select class="form-control" id="exampleFormControlSelect1">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlSelect2">Example multiple select</label>
+            <select multiple class="form-control" id="exampleFormControlSelect2">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlTextarea1">Example textarea</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
+      <div class="col d-none d-md-flex  text-light text-shadow flex-column justify-content-center">
+        <div class="image-text">
+          <h2>
+          I'm The Warrior
+          </h2>
+          <p>I know what my class can and can't do</p>
+        </div>
+      </div>
     </section>
     <section class="row">
 
