row 3 initial done

--- a/index.html
+++ b/index.html
@@ -60,8 +60,24 @@
         </div>
       </div>
     </section>
-    <section class="row">
-
+    <section class="row bg-primary">
+      <div class="col-12 col-md-6 text-light">
+        <h2>
+          How to not be The Warrior
+        </h2>
+        <p>
+          Found them? In Mercia?! The coconut's tropical! Did you dress her up like this? Shh! Knights, I bid you welcome to your new home. Let us ride to Camelot! The swallow may fly south with the sun, and the house martin or the plover may seek warmer climes in winter, yet these are not strangers to our land.
+        </p>
+      </div>
+      <div class="col-12 col-md-6">
+        <div class="card box-shadow offset-card">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Cras justo odio</li>
+            <li class="list-group-item">Dapibus ac facilisis in</li>
+            <li class="list-group-item">Vestibulum at eros</li>
+          </ul>
+        </div>
+      </div>
     </section>
     <section class="row">
 
