--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
   <link rel="stylesheet"href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
   <title>The Warrior</title>
@@ -54,7 +55,7 @@
       <div class="col d-none d-md-flex  text-light text-shadow flex-column justify-content-center">
         <div class="image-text">
           <h2>
-          I'm The Warrior
+            I'm The Warrior
           </h2>
           <p>I know what my class can and can't do</p>
         </div>
@@ -80,7 +81,25 @@
       </div>
     </section>
     <section class="row">
+      <section class="col-12 col-md-4">
+        <img src="/wol placeholder.png" class="img-fluid" alt="">
+      </section>
+      <section class="col-12 col-md-8">
+        <h1>
+          <i class="fa fa-check-circle" aria-hidden="true"></i> The Real Warrior
+        </h1>
+        
+        <p>
+          Why do you think that she is a witch? Where'd you get the coconuts? Where'd you get the coconuts? Why do you think that she is a witch? The nose? Be quiet!
 
+How do you know she is a witch? Look, my liege! Who's that then? …Are you suggesting that coconuts migrate? Well, she turned me into a newt.
+
+Oh! Come and see the violence inherent in the system! Help, help, I'm being repressed! And this isn't my nose. This is a false one. Listen. Strange women lying in ponds distributing swords is no basis for a system of government. Supreme executive power derives from a mandate from the masses, not from some farcical aquatic ceremony.
+
+Well, I got better. Camelot! Bloody Peasant! Well, she turned me into a newt. Bloody Peasant! What a strange person.
+        </p>
+        <button type="button" class="btn btn-primary">Primary</button>
+      </section>
     </section>
     <section class="row">
 
