rough draft done, technically passes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <header class="container-fluid">
-    <section class="row bg-primary text-light sticky-top">
-      <div class="col d-flex align-items-center">
+    <section class="row bg-primary text-light">
+      <div class="col d-flex align-items-center sticky-top">
         <img class="logo" src="/fellcleave.png" alt="">
         <h1 class="pl-1">The Warrior</h1>
       </div>
@@ -101,16 +101,53 @@ Well, I got better. Camelot! Bloody Peasant! Well, she turned me into a newt. Bl
         <button type="button" class="btn btn-primary">Primary</button>
       </section>
     </section>
-    <section class="row">
-
+    <section class="row bg-secondary align-items-center d-flex">
+      <div class="col-12 col-md-4 order-md-2">
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h3 class="text-center"><i class="fas fa-bomb"></i><i class="fas fa-bomb"></i><i class="fas fa-bomb"></i></h3>
+            <h5 class="card-title"><i class="fas fa-quote-left"></i></h5>
+            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="card-link">Card link</a>
+            <a href="#" class="card-link">Another link</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-4 order-md-1">
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title"><i class="fas fa-quote-left"></i></h5>
+            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="card-link">Card link</a>
+            <a href="#" class="card-link">Another link</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-4 order-md-3">
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title"><i class="fas fa-quote-left"></i></h5>
+            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="card-link">Card link</a>
+            <a href="#" class="card-link">Another link</a>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
-  <footer class="container">
-    <section class="row">
-
+  <footer class="container-fluid">
+    
+    <section class="row bg-primary">
+      <h2>This is a Joke Site</h2>
+      <p>Seriously, this is a joke. I mean it. </p>
     </section>
     <section class="row">
-
+      <div class="col text-center">
+        <h5 class="text-primary">I never said it was a funny one</h5>
+      </div>
     </section>
   </footer>
 </body>
