fixed sticky nav

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   <title>The Warrior</title>
 </head>
 <body>
-  <header class="container-fluid">
+  <header class="container-fluid  sticky-top">
     <section class="row bg-primary text-light">
-      <div class="col d-flex align-items-center sticky-top">
+      <div class="col">
+        <nav class="align-items-center d-flex">
         <img class="logo" src="/fellcleave.png" alt="">
         <h1 class="pl-1">The Warrior</h1>
+       </nav>
       </div>
     </section>
   </header>
@@ -150,5 +152,9 @@ Well, I got better. Camelot! Bloody Peasant! Well, she turned me into a newt. Bl
       </div>
     </section>
   </footer>
+  <!-- JS, Popper.js, and jQuery -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 </html>
