final done, needs finishing touches

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="row hero-image">
       <div class="col col-4-md bg-light m-2 text-dark">
         <form>
-          <div class="form-group">
+          <div class="form-group p-2">
             <label for="exampleFormControlInput1">Email address</label>
             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
           </div>
@@ -51,11 +51,11 @@
             <label for="exampleFormControlTextarea1">Example textarea</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary mb-1">Submit</button>
         </form>
       </div>
       <div class="col d-none d-md-flex  text-light text-shadow flex-column justify-content-center">
-        <div class="image-text">
+        <div class="image-text pl-2">
           <h2>
             I'm The Warrior
           </h2>
@@ -64,7 +64,7 @@
       </div>
     </section>
     <section class="row bg-primary">
-      <div class="col-12 col-md-6 text-light">
+      <div class="col-12 col-md-6 text-light py-2">
         <h2>
           How to not be The Warrior
         </h2>
@@ -72,21 +72,21 @@
           Found them? In Mercia?! The coconut's tropical! Did you dress her up like this? Shh! Knights, I bid you welcome to your new home. Let us ride to Camelot! The swallow may fly south with the sun, and the house martin or the plover may seek warmer climes in winter, yet these are not strangers to our land.
         </p>
       </div>
-      <div class="col-12 col-md-6">
+      <div class="col-12 col-md-6 d-flex justify-content-end">
         <div class="card box-shadow offset-card">
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">Cras justo odio</li>
-            <li class="list-group-item">Dapibus ac facilisis in</li>
-            <li class="list-group-item">Vestibulum at eros</li>
+            <li class="list-group-item"><i class="fa fa-cube" aria-hidden="true"></i> Cras justo odio</li>
+            <li class="list-group-item"><i class="fa fa-address-book" aria-hidden="true"></i> Dapibus ac facilisis in</li>
+            <li class="list-group-item"><i class="fa fa-ambulance" aria-hidden="true"></i> Vestibulum at eros</li>
           </ul>
         </div>
       </div>
     </section>
     <section class="row">
-      <section class="col-12 col-md-4">
-        <img src="/wol placeholder.png" class="img-fluid" alt="">
+      <section class="col-12 col-md-4 justify-content-center d-flex">
+        <img src="/wol placeholder.png" class="img-fluid midsite-image m-2" alt="">
       </section>
-      <section class="col-12 col-md-8">
+      <section class="col-12 col-md-8 justify-content-center d-flex flex-column mb-2">
         <h1>
           <i class="fa fa-check-circle" aria-hidden="true"></i> The Real Warrior
         </h1>
@@ -100,11 +100,11 @@ Oh! Come and see the violence inherent in the system! Help, help, I'm being repr
 
 Well, I got better. Camelot! Bloody Peasant! Well, she turned me into a newt. Bloody Peasant! What a strange person.
         </p>
-        <button type="button" class="btn btn-primary">Primary</button>
+        <button type="button" class="btn btn-primary">Lets go</button>
       </section>
     </section>
     <section class="row bg-secondary align-items-center d-flex">
-      <div class="col-12 col-md-4 order-md-2">
+      <div class="col-12 col-md-4 order-md-2 py-3">
         <div class="card" style="width: 18rem;">
           <div class="card-body">
             <h3 class="text-center"><i class="fas fa-bomb"></i><i class="fas fa-bomb"></i><i class="fas fa-bomb"></i></h3>
@@ -116,7 +116,7 @@ Well, I got better. Camelot! Bloody Peasant! Well, she turned me into a newt. Bl
           </div>
         </div>
       </div>
-      <div class="col-12 col-md-4 order-md-1">
+      <div class="col-12 col-md-4 order-md-1 py-3">
         <div class="card" style="width: 18rem;">
           <div class="card-body">
             <h5 class="card-title"><i class="fas fa-quote-left"></i></h5>
@@ -127,7 +127,7 @@ Well, I got better. Camelot! Bloody Peasant! Well, she turned me into a newt. Bl
           </div>
         </div>
       </div>
-      <div class="col-12 col-md-4 order-md-3">
+      <div class="col-12 col-md-4 order-md-3 py-3">
         <div class="card" style="width: 18rem;">
           <div class="card-body">
             <h5 class="card-title"><i class="fas fa-quote-left"></i></h5>
