moved images into folder

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="row bg-primary text-light">
       <div class="col">
         <nav class="align-items-center d-flex">
-        <img class="logo" src="/fellcleave.png" alt="">
+        <img class="logo" src="/assets/fellcleave.png" alt="">
         <h1 class="pl-1">The Warrior</h1>
        </nav>
       </div>
@@ -84,7 +84,7 @@
     </section>
     <section class="row">
       <section class="col-12 col-md-4 justify-content-center d-flex">
-        <img src="/wol placeholder.png" class="img-fluid midsite-image m-2" alt="">
+        <img src="/assets/wol-placeholder.png" class="img-fluid midsite-image m-2" alt="">
       </section>
       <section class="col-12 col-md-8 justify-content-center d-flex flex-column mb-2">
         <h1>
